--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,10 @@ body {
   }
 }
 
+.bg-brand {
+  background-color: #284b63;
+}
+
 .bg-overlay {
   background-color: #284b63; /* Your desired overlay color */
   opacity: 0.75; /* Adjust the opacity as needed */
